compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__records__field_named_constructor_is_escaped.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/records.rs
assertion_line: 97
expression: "\npub type Wibble {\n  Wibble(constructor: fn() -> Wibble)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble(constructor: fn() -> Wibble)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor(constructor) {
    super();
    this.constructor$ = constructor;
  }
}
export const Wibble$Wibble = (constructor) => new Wibble(constructor);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$constructor = (value) => value.constructor$;
export const Wibble$Wibble$0 = (value) => value.constructor$;
