compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__records__field_named_prototype_is_escaped.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/records.rs
assertion_line: 108
expression: "\npub type Wibble {\n  Wibble(prototype: String)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble(prototype: String)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor(prototype) {
    super();
    this.prototype$ = prototype;
  }
}
export const Wibble$Wibble = (prototype) => new Wibble(prototype);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$prototype = (value) => value.prototype$;
export const Wibble$Wibble$0 = (value) => value.prototype$;
