compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__records__field_named_x0.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/records.rs
assertion_line: 75
expression: "\npub type Wibble {\n  Wibble(Int, x0: String)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble(Int, x0: String)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor($0, x0) {
    super();
    this[0] = $0;
    this.x0 = x0;
  }
}
export const Wibble$Wibble = ($0, x0) => new Wibble($0, x0);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$0 = (value) => value[0];
export const Wibble$Wibble$x0 = (value) => value.x0;
export const Wibble$Wibble$1 = (value) => value.x0;
