compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__records__record_accessor_multiple_variants_parameterised_types.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/records.rs
assertion_line: 61
expression: "\npub type Person {\n    Teacher(name: String, age: List(Int), title: String)\n    Student(name: String, age: List(Int))\n}\npub fn get_name(person: Person) { person.name }\npub fn get_age(person: Person) { person.age }"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
    Teacher(name: String, age: List(Int), title: String)
    Student(name: String, age: List(Int))
}
pub fn get_name(person: Person) { person.name }
pub fn get_age(person: Person) { person.age }

----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Teacher extends $CustomType {
  constructor(name, age, title) {
    super();
    this.name = name;
    this.age = age;
    this.title = title;
  }
}
export const Person$Teacher = (name, age, title) =>
  new Teacher(name, age, title);
export const Person$isTeacher = (value) => value instanceof Teacher;
export const Person$Teacher$name = (value) => value.name;
export const Person$Teacher$0 = (value) => value.name;
export const Person$Teacher$age = (value) => value.age;
export const Person$Teacher$1 = (value) => value.age;
export const Person$Teacher$title = (value) => value.title;
export const Person$Teacher$2 = (value) => value.title;

export class Student extends $CustomType {
  constructor(name, age) {
    super();
    this.name = name;
    this.age = age;
  }
}
export const Person$Student = (name, age) => new Student(name, age);
export const Person$isStudent = (value) => value instanceof Student;
export const Person$Student$name = (value) => value.name;
export const Person$Student$0 = (value) => value.name;
export const Person$Student$age = (value) => value.age;
export const Person$Student$1 = (value) => value.age;

export const Person$age = (value) => value.age;
export const Person$name = (value) => value.name;

export function get_name(person) {
  return person.name;
}

export function get_age(person) {
  return person.age;
}
