compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__records__record_accessors.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/records.rs
assertion_line: 6
expression: "\npub type Person { Person(name: String, age: Int) }\npub fn get_age(person: Person) { person.age }\npub fn get_name(person: Person) { person.name }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person { Person(name: String, age: Int) }
pub fn get_age(person: Person) { person.age }
pub fn get_name(person: Person) { person.name }


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Person extends $CustomType {
  constructor(name, age) {
    super();
    this.name = name;
    this.age = age;
  }
}
export const Person$Person = (name, age) => new Person(name, age);
export const Person$isPerson = (value) => value instanceof Person;
export const Person$Person$name = (value) => value.name;
export const Person$Person$0 = (value) => value.name;
export const Person$Person$age = (value) => value.age;
export const Person$Person$1 = (value) => value.age;

export function get_age(person) {
  return person.age;
}

export function get_name(person) {
  return person.name;
}
