compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__records__record_update_with_unlabelled_fields.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/records.rs
assertion_line: 137
expression: "\npub type Wibble {\n  Wibble(Int, Float, b: Bool, s: String)\n}\n\npub fn main() {\n  let record = Wibble(1, 3.14, True, \"Hello\")\n  Wibble(..record, b: False)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble(Int, Float, b: Bool, s: String)
}

pub fn main() {
  let record = Wibble(1, 3.14, True, "Hello")
  Wibble(..record, b: False)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor($0, $1, b, s) {
    super();
    this[0] = $0;
    this[1] = $1;
    this.b = b;
    this.s = s;
  }
}
export const Wibble$Wibble = ($0, $1, b, s) => new Wibble($0, $1, b, s);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$0 = (value) => value[0];
export const Wibble$Wibble$1 = (value) => value[1];
export const Wibble$Wibble$b = (value) => value.b;
export const Wibble$Wibble$2 = (value) => value.b;
export const Wibble$Wibble$s = (value) => value.s;
export const Wibble$Wibble$3 = (value) => value.s;

export function main() {
  let record = new Wibble(1, 3.14, true, "Hello");
  return new Wibble(record[0], record[1], false, record.s);
}
